Fix Docker image path resolution in GitHub Actions
- Correct BASE_REGISTRY and BASE_VERSION parameters to avoid duplicate path segments
- Update examples/Dockerfile to use new parameter format
- Fix image reference from 'ghcr.io/.../runtime/jodconverter-runtime:latest'
  to correct 'ghcr.io/.../runtime:latest'

Fixes: failed to resolve source metadata - image not found

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -102,8 +102,8 @@ jobs:
         tags: ${{ steps.meta-examples.outputs.tags }}-gui
         labels: ${{ steps.meta-examples.outputs.labels }}
         build-args: |
-          BASE_REGISTRY=${{ env.REGISTRY }}/${{ steps.repo.outputs.name }}-runtime
-          BASE_VERSION=latest
+          BASE_REGISTRY=${{ env.REGISTRY }}
+          BASE_VERSION=${{ steps.repo.outputs.name }}-runtime:latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
@@ -117,8 +117,8 @@ jobs:
         tags: ${{ steps.meta-examples.outputs.tags }}-rest
         labels: ${{ steps.meta-examples.outputs.labels }}
         build-args: |
-          BASE_REGISTRY=${{ env.REGISTRY }}/${{ steps.repo.outputs.name }}-runtime
-          BASE_VERSION=latest
+          BASE_REGISTRY=${{ env.REGISTRY }}
+          BASE_VERSION=${{ steps.repo.outputs.name }}-runtime:latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
