--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,8 +24,9 @@ jobs:
     - name: Set lowercase repository name
       id: repo
       run: |
-        echo "name=${GITHUB_REPOSITORY,,}" >> $GITHUB_OUTPUT
         echo "owner=${GITHUB_REPOSITORY_OWNER,,}" >> $GITHUB_OUTPUT
+        REPO_NAME=$(echo "${GITHUB_REPOSITORY#*/}" | tr '[:upper:]' '[:lower:]')
+        echo "repo_name=${REPO_NAME}" >> $GITHUB_OUTPUT
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -42,7 +43,7 @@ jobs:
       id: meta-runtime
       uses: docker/metadata-action@v5
       with:
-        images: ${{ env.REGISTRY }}/${{ steps.repo.outputs.name }}-runtime
+        images: ${{ env.REGISTRY }}/${{ steps.repo.outputs.owner }}/${{ steps.repo.outputs.repo_name }}-runtime
         tags: |
           type=ref,event=branch
           type=ref,event=pr
@@ -54,7 +55,7 @@ jobs:
       id: meta-examples
       uses: docker/metadata-action@v5
       with:
-        images: ${{ env.REGISTRY }}/${{ steps.repo.outputs.name }}-examples
+        images: ${{ env.REGISTRY }}/${{ steps.repo.outputs.owner }}/${{ steps.repo.outputs.repo_name }}-examples
         tags: |
           type=ref,event=branch
           type=ref,event=pr
@@ -102,8 +103,8 @@ jobs:
         tags: ${{ steps.meta-examples.outputs.tags }}-gui
         labels: ${{ steps.meta-examples.outputs.labels }}
         build-args: |
-          BASE_REGISTRY=${{ env.REGISTRY }}
-          BASE_VERSION=${{ steps.repo.outputs.name }}-runtime:latest
+          BASE_REGISTRY=${{ env.REGISTRY }}/${{ steps.repo.outputs.owner }}
+          BASE_VERSION=${{ steps.repo.outputs.repo_name }}-runtime:latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
@@ -117,8 +118,8 @@ jobs:
         tags: ${{ steps.meta-examples.outputs.tags }}-rest
         labels: ${{ steps.meta-examples.outputs.labels }}
         build-args: |
-          BASE_REGISTRY=${{ env.REGISTRY }}
-          BASE_VERSION=${{ steps.repo.outputs.name }}-runtime:latest
+          BASE_REGISTRY=${{ env.REGISTRY }}/${{ steps.repo.outputs.owner }}
+          BASE_VERSION=${{ steps.repo.outputs.repo_name }}-runtime:latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
@@ -134,7 +135,9 @@ jobs:
     - name: Set lowercase repository name
       id: repo
       run: |
-        echo "name=${GITHUB_REPOSITORY,,}" >> $GITHUB_OUTPUT
+        echo "owner=${GITHUB_REPOSITORY_OWNER,,}" >> $GITHUB_OUTPUT
+        REPO_NAME=$(echo "${GITHUB_REPOSITORY#*/}" | tr '[:upper:]' '[:lower:]')
+        echo "repo_name=${REPO_NAME}" >> $GITHUB_OUTPUT
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
