--- a/.github/workflows/docker-final.yml
+++ b/.github/workflows/docker-final.yml
@@ -11,15 +11,11 @@ env:
   REGISTRY: ghcr.io
 
 jobs:
-  build-runtime:
+  build:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-    outputs:
-      image-name: ${{ steps.meta-runtime.outputs.tags }}
-      owner: ${{ steps.repo.outputs.owner }}
-      repo-name: ${{ steps.repo.outputs.repo_name }}
 
     steps:
     - name: Checkout repository
@@ -55,6 +51,19 @@ jobs:
           type=semver,pattern={{major}}.{{minor}}
           type=raw,value=latest,enable={{is_default_branch}}
 
+    - name: Extract metadata for examples
+      id: meta-examples
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.REGISTRY }}/${{ steps.repo.outputs.owner }}/${{ steps.repo.outputs.repo_name }}-examples
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
+          type=raw,value=latest,enable={{is_default_branch}}
+
+    # Build runtime images first
     - name: Build and push runtime JRE image
       uses: docker/build-push-action@v5
       with:
@@ -68,6 +77,7 @@ jobs:
           JAVA_VERSION=21
         cache-from: type=gha
         cache-to: type=gha,mode=max
+        outputs: type=docker
 
     - name: Build and push runtime JDK image
       uses: docker/build-push-action@v5
@@ -83,40 +93,7 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
-  build-examples:
-    runs-on: ubuntu-latest
-    needs: build-runtime
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Log into registry ${{ env.REGISTRY }}
-      if: github.event_name != 'pull_request'
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Extract metadata for examples
-      id: meta-examples
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.REGISTRY }}/${{ needs.build-runtime.outputs.owner }}/${{ needs.build-runtime.outputs.repo-name }}-examples
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=semver,pattern={{version}}
-          type=semver,pattern={{major}}.{{minor}}
-          type=raw,value=latest,enable={{is_default_branch}}
-
+    # Build examples images (depend on runtime)
     - name: Build and push examples GUI image
       uses: docker/build-push-action@v5
       with:
@@ -127,7 +104,7 @@ jobs:
         tags: ${{ steps.meta-examples.outputs.tags }}-gui
         labels: ${{ steps.meta-examples.outputs.labels }}
         build-args: |
-          BASE_REGISTRY=${{ env.REGISTRY }}/${{ needs.build-runtime.outputs.owner }}/${{ needs.build-runtime.outputs.repo-name }}-runtime
+          BASE_REGISTRY=${{ env.REGISTRY }}/${{ steps.repo.outputs.owner }}/${{ steps.repo.outputs.repo_name }}-runtime
           BASE_VERSION=latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
@@ -142,14 +119,14 @@ jobs:
         tags: ${{ steps.meta-examples.outputs.tags }}-rest
         labels: ${{ steps.meta-examples.outputs.labels }}
         build-args: |
-          BASE_REGISTRY=${{ env.REGISTRY }}/${{ needs.build-runtime.outputs.owner }}/${{ needs.build-runtime.outputs.repo-name }}-runtime
+          BASE_REGISTRY=${{ env.REGISTRY }}/${{ steps.repo.outputs.owner }}/${{ steps.repo.outputs.repo_name }}-runtime
           BASE_VERSION=latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
   test:
     runs-on: ubuntu-latest
-    needs: [build-runtime, build-examples]
+    needs: build
     if: github.event_name == 'pull_request'
     
     steps:
