--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,6 +21,7 @@ jobs:
       image-name: ${{ steps.meta-runtime.outputs.tags }}
       owner: ${{ steps.repo.outputs.owner }}
       repo-name: ${{ steps.repo.outputs.repo_name }}
+      lo-version: ${{ steps.lo-version.outputs.version }}
 
     steps:
     - name: Checkout repository
@@ -44,12 +45,37 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Build runtime JRE image for version detection
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./runtime/Dockerfile
+        target: jre
+        load: true
+        tags: runtime-temp:jre
+        build-args: |
+          JAVA_VERSION=21
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+
+    - name: Detect LibreOffice version
+      id: lo-version
+      run: |
+        LO_VERSION=$(docker run --rm runtime-temp:jre libreoffice --version | grep -oP '\d+\.\d+' | head -1)
+        echo "version=${LO_VERSION}" >> $GITHUB_OUTPUT
+        echo "Detected LibreOffice version: ${LO_VERSION}"
+
     - name: Extract metadata for runtime
       id: meta-runtime
       uses: docker/metadata-action@v5
       with:
         images: ${{ env.REGISTRY }}/${{ steps.repo.outputs.owner }}/${{ steps.repo.outputs.repo_name }}-runtime
         tags: |
+          type=ref,event=branch,suffix=-lo${{ steps.lo-version.outputs.version }}
+          type=ref,event=pr,suffix=-lo${{ steps.lo-version.outputs.version }}
+          type=semver,pattern={{version}},suffix=-lo${{ steps.lo-version.outputs.version }}
+          type=semver,pattern={{major}}.{{minor}},suffix=-lo${{ steps.lo-version.outputs.version }}
+          type=raw,value=latest-lo${{ steps.lo-version.outputs.version }},enable={{is_default_branch}}
           type=ref,event=branch
           type=ref,event=pr
           type=semver,pattern={{version}}
@@ -112,6 +138,11 @@ jobs:
       with:
         images: ${{ env.REGISTRY }}/${{ needs.build-runtime.outputs.owner }}/${{ needs.build-runtime.outputs.repo-name }}-examples
         tags: |
+          type=ref,event=branch,suffix=-lo${{ needs.build-runtime.outputs.lo-version }}
+          type=ref,event=pr,suffix=-lo${{ needs.build-runtime.outputs.lo-version }}
+          type=semver,pattern={{version}},suffix=-lo${{ needs.build-runtime.outputs.lo-version }}
+          type=semver,pattern={{major}}.{{minor}},suffix=-lo${{ needs.build-runtime.outputs.lo-version }}
+          type=raw,value=latest-lo${{ needs.build-runtime.outputs.lo-version }},enable={{is_default_branch}}
           type=ref,event=branch
           type=ref,event=pr
           type=semver,pattern={{version}}
