--- a/runtime/Dockerfile
+++ b/runtime/Dockerfile
@@ -36,7 +36,7 @@ COPY --from=jresource /jre $JAVA_HOME
 
 # using backports for libreoffice 24.x (bookworm has 7.x)
 RUN apt-get update && apt-get -y install \
-  apt-transport-https locales-all libpng16-16t64 libxinerama1 libgl1 libfontconfig1 libfreetype6 libxrender1 \
+  apt-transport-https locales-all libpng16-16 libxinerama1 libgl1-mesa-glx libfontconfig1 libfreetype6 libxrender1 \
   libxcb-shm0 libxcb-render0 adduser cpio findutils gosu \
   # procps needed for us finding the libreoffice process, see https://github.com/sbraconnier/jodconverter/issues/127#issuecomment-463668183
   procps \
