ci(docker): Replace Debian backports with official LibreOffice packages
- Remove temporary runtime image build step for version detection
- Replace LibreOffice version detection from Docker image with Dockerfile parsing
- Add LIBREOFFICE_VERSION build argument to Dockerfile with default value 25.8.5
- Implement architecture detection for LibreOffice download URLs (amd64, arm64)
- Replace Debian backports repository with direct download from official LibreOffice packages
- Pass LIBREOFFICE_VERSION to both runtime and examples Docker builds
- Add wget to runtime dependencies for downloading LibreOffice packages
- Simplifies CI workflow by eliminating intermediate image build and improves version control

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -45,25 +45,14 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build runtime JRE image for version detection
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        file: ./runtime/Dockerfile
-        target: jre
-        load: true
-        tags: runtime-temp:jre
-        build-args: |
-          JAVA_VERSION=21
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-
-    - name: Detect LibreOffice version
+    - name: Set LibreOffice version
       id: lo-version
       run: |
-        LO_VERSION=$(docker run --rm runtime-temp:jre libreoffice --version | grep -oP '\d+\.\d+' | head -1)
-        echo "version=${LO_VERSION}" >> $GITHUB_OUTPUT
-        echo "Detected LibreOffice version: ${LO_VERSION}"
+        LO_VERSION=$(grep -oP '(?<=LIBREOFFICE_VERSION=)\S+' runtime/Dockerfile)
+        LO_VERSION_SHORT=$(echo "$LO_VERSION" | grep -oP '^\d+\.\d+')
+        echo "version=${LO_VERSION_SHORT}" >> $GITHUB_OUTPUT
+        echo "full_version=${LO_VERSION}" >> $GITHUB_OUTPUT
+        echo "LibreOffice version: ${LO_VERSION} (short: ${LO_VERSION_SHORT})"
 
     - name: Extract metadata for runtime
       id: meta-runtime
@@ -93,6 +82,7 @@ jobs:
         labels: ${{ steps.meta-runtime.outputs.labels }}
         build-args: |
           JAVA_VERSION=21
+          LIBREOFFICE_VERSION=${{ steps.lo-version.outputs.full_version }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
@@ -107,6 +97,7 @@ jobs:
         labels: ${{ steps.meta-runtime.outputs.labels }}
         build-args: |
           JAVA_VERSION=21
+          LIBREOFFICE_VERSION=${{ steps.lo-version.outputs.full_version }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
